astar and energy implementation

--- a/notebooks/env.ipynb
+++ b/notebooks/env.ipynb
@@ -70,7 +70,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Agent:\n",
+    "    def __init__(self, player: str, env_cfg: Dict[str, Any]) -> None:\n",
+    "        self.player = player\n",
+    "        self.opp_player = \"player_1\" if self.player == \"player_0\" else \"player_0\"\n",
+    "        self.team_id = 0 if self.player == \"player_0\" else 1\n",
+    "        self.opp_team_id = 1 if self.team_id == 0 else 0\n",
+    "        np.random.seed(0)\n",
+    "        self.env_cfg = env_cfg\n",
+    "\n",
+    "        self.map = Graph(env_cfg[\"map_width\"], env_cfg[\"map_height\"])\n",
+    "\n",
+    "    def act(self, step: int, obs: Dict[str, Any], remainingOverageTime: int = 60):\n",
+    "        \"\"\"implement this function to decide what actions to send to each available unit.\n",
+    "\n",
+    "        step is the current timestep number of the game starting from 0 going up to max_steps_in_match * match_count_per_episode - 1.\n",
+    "        \"\"\"\n",
+    "\n",
+    "        unit_mask = np.array(obs[\"units_mask\"][self.team_id])\n",
+    "        unit_positions: NDArray[np.int16] = np.array(\n",
+    "            obs[\"units\"][\"position\"][self.team_id]\n",
+    "        )[unit_mask]\n",
+    "        return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def direction_to(src, target):\n",
+    "    ds = target - src\n",
+    "    dx = ds[0]\n",
+    "    dy = ds[1]\n",
+    "    if dx == 0 and dy == 0:\n",
+    "        return 0\n",
+    "    if abs(dx) > abs(dy):\n",
+    "        if dx > 0:\n",
+    "            return 2\n",
+    "        else:\n",
+    "            return 4\n",
+    "    else:\n",
+    "        if dy > 0:\n",
+    "            return 3\n",
+    "        else:\n",
+    "            return 1\n",
+    "\n",
+    "\n",
+    "def manhattan_distance(start_node: ArrayLike, end_node: ArrayLike) -> int:\n",
+    "    return abs(start_node[0] - end_node[0]) + abs(start_node[0] - end_node[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,73 +157,149 @@
     "\n",
     "class Graph:\n",
     "    def __init__(self, map_width: int, map_height: int):\n",
-    "        self.map = nx.grid_graph(dim=[map_width, map_height])\n",
+    "        self.map: nx.DiGraph = nx.grid_2d_graph(\n",
+    "            map_width, map_height, periodic=False, create_using=nx.DiGraph()\n",
+    "        )\n",
     "\n",
-    "    def direction_to(self, start_node: ArrayLike, end_node: ArrayLike) -> int:\n",
+    "    def update_cost(self, node: ArrayLike, cost: float):\n",
+    "        nx.set_edge_attributes(self.map, cost, \"cost\")\n",
+    "\n",
+    "    def map_shortest_path_to_action(\n",
+    "        self, start_node: ArrayLike, end_node: ArrayLike\n",
+    "    ) -> int:\n",
     "        next_node = nx.astar_path(\n",
     "            self.map, start_node, end_node, heuristic=manhattan_distance\n",
     "        )[1]\n",
     "\n",
-    "        return direction_to(np.array(start_node), np.array(next_node))\n",
-    "\n",
-    "\n",
-    "def direction_to(src, target):\n",
-    "    ds = target - src\n",
-    "    dx = ds[0]\n",
-    "    dy = ds[1]\n",
-    "    if dx == 0 and dy == 0:\n",
-    "        return 0\n",
-    "    if abs(dx) > abs(dy):\n",
-    "        if dx > 0:\n",
-    "            return 2\n",
-    "        else:\n",
-    "            return 4\n",
-    "    else:\n",
-    "        if dy > 0:\n",
-    "            return 3\n",
-    "        else:\n",
-    "            return 1\n",
-    "\n",
-    "\n",
-    "def manhattan_distance(start_node: ArrayLike, end_node: ArrayLike) -> int:\n",
-    "    return abs(start_node[0] - end_node[0]) + abs(start_node[0] - end_node[0])\n",
-    "\n",
-    "\n",
-    "class Agent:\n",
-    "    def __init__(self, player: str, env_cfg: Dict[str, Any]) -> None:\n",
-    "        self.player = player\n",
-    "        self.opp_player = \"player_1\" if self.player == \"player_0\" else \"player_0\"\n",
-    "        self.team_id = 0 if self.player == \"player_0\" else 1\n",
-    "        self.opp_team_id = 1 if self.team_id == 0 else 0\n",
-    "        np.random.seed(0)\n",
-    "        self.env_cfg = env_cfg\n",
-    "\n",
-    "        self.map = Graph(env_cfg[\"map_width\"], env_cfg[\"map_height\"])\n",
-    "\n",
-    "    def act(self, step: int, obs: Dict[str, Any], remainingOverageTime: int = 60):\n",
-    "        \"\"\"implement this function to decide what actions to send to each available unit.\n",
-    "\n",
-    "        step is the current timestep number of the game starting from 0 going up to max_steps_in_match * match_count_per_episode - 1.\n",
-    "        \"\"\"\n",
-    "\n",
-    "        unit_mask = np.array(obs[\"units_mask\"][self.team_id])\n",
-    "        unit_positions: NDArray[np.int16] = np.array(\n",
-    "            obs[\"units\"][\"position\"][self.team_id]\n",
-    "        )[unit_mask]\n",
-    "        return 0"
+    "        return direction_to(np.array(start_node), np.array(next_node))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(np.int16(0), np.int16(1)) (np.int16(1), np.int16(2))\n",
-      "2\n"
+      "2208\n"
+     ]
+    }
+   ],
+   "source": [
+    "G = Graph(24, 24)\n",
+    "{e: 0 for e in G.map.edges()}\n",
+    "G.map.add_node((0, 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([[0, 0, 0, 0, 1, 1, 1, 1, 2, 2, 2, 2],\n",
+       "       [0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3]], dtype=int32)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obs[\"player_0\"].sensor_mask.shape\n",
+    "\n",
+    "jax.numpy.indices(obs[\"player_0\"].sensor_mask.shape)[:, obs[\"player_0\"].sensor_mask]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([[ 5,  4,  2,  0, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,\n",
+       "        -1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [ 4,  2,  0, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,\n",
+       "        -1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [ 2,  0, -1,  0, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,\n",
+       "        -1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,\n",
+       "        -1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,\n",
+       "        -1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,\n",
+       "        -1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,\n",
+       "        -1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,\n",
+       "        -1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,\n",
+       "        -1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,\n",
+       "        -1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,\n",
+       "        -1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,\n",
+       "        -1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,\n",
+       "        -1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,\n",
+       "        -1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,\n",
+       "        -1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,\n",
+       "        -1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,\n",
+       "        -1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,\n",
+       "        -1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,\n",
+       "        -1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,\n",
+       "        -1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,\n",
+       "        -1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,\n",
+       "        -1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,\n",
+       "        -1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,\n",
+       "        -1, -1, -1, -1, -1, -1, -1, -1]], dtype=int16)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obs[\"player_0\"].map_features.energy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2208\n"
      ]
     },
     {
@@ -174,7 +308,7 @@
        "0"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,13 +348,6 @@
     "\n",
     "Agent(\"player_0\", env_params_to_dict(env_params)).act(0, obs_to_dict(obs[\"player_0\"]))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
