--- a/notebooks/env.ipynb
+++ b/notebooks/env.ipynb
@@ -70,10 +70,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from argparse import Namespace\n",
+    "from dataclasses import dataclass\n",
+    "from typing import Any, Dict\n",
+    "import numpy as np\n",
+    "import networkx as nx\n",
+    "import numpy as np\n",
+    "from numpy.typing import ArrayLike, NDArray\n",
+    "\n",
+    "\n",
     "class Agent:\n",
     "    def __init__(self, player: str, env_cfg: Dict[str, Any]) -> None:\n",
     "        self.player = player\n",
@@ -100,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,17 +137,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from argparse import Namespace\n",
-    "from dataclasses import dataclass\n",
-    "from typing import Any, Dict\n",
-    "import numpy as np\n",
-    "import networkx as nx\n",
-    "import numpy as np\n",
-    "from numpy.typing import ArrayLike, NDArray\n",
     "\n",
     "\n",
     "@dataclass(frozen=True)\n",
@@ -176,17 +178,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2208\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "G = Graph(24, 24)\n",
     "{e: 0 for e in G.map.edges()}\n",
@@ -352,7 +346,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lux-s3-bot-irC4jx2b-py3.11",
+   "display_name": "lux-s3-bot-QknvIJxg-py3.11",
    "language": "python",
    "name": "python3"
   },
@@ -366,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
